--- a/changelog.txt
+++ b/changelog.txt
@@ -2,18 +2,20 @@
 11/08/2015
 
 Balance changes:
-- metalmakers: generate around 16.5% less metal
+- Energy converters: generate around 16.5% less metal
 - HP of t1 vechicles increased by 5% (except scout, cons, minelayer)
-- all air now collide (except scouts, sonars and fighters)
-- t1 bombers are 3% slower
-- t2 bombers are 8% slower but energy cost was decreased by 10%
-- t1 artillery now cost 10% less metal
+- All air now collide (except scouts, sonars and fighters)
+- T1 bombers are 3% slower
+- T2 bombers are 8% slower but energy cost was decreased by 10%
+- T1 artillery now cost 10% less metal
 
-- added widget: "unit info" -> select unit and press U, or use /unitinfo armcom
+- Added widget: "unit info" -> select unit and press U, or use /unitinfo armcom
 
-- wind display remembers position again
-- resource bars show decimals again for a in/out value lower than 10
-- point tracker: disabled by default, and removed in screen drawing
+- Metal output for energy converters is showing in tooltips
+- EMPed energy converters are not producing metal anymore
+- Wind display remembers position again
+- Resource bars show decimals again for a in/out value lower than 10
+- Point tracker: disabled by default, and removed in screen drawing
 
 
 9.03 -> 9.04
