--- a/changelog.txt
+++ b/changelog.txt
@@ -2,7 +2,7 @@
 18/09/2015
 
 Balance changes:
-- Increased range of t2 emp spider (220 -> 280)
+- Increased range of arm emp spider (220 -> 280)
 - T2 spiders (Termite, Recluse, Spider) are more EMP resistant
 - Removed rockets wobbling for ARM "All-Terrain Rocket Spider"(Recluse) and added 1 more rocket (3 -> 4)
 
