--- a/changelog.txt
+++ b/changelog.txt
@@ -8,7 +8,7 @@ Balance changes:
 Others:
 - Added "No Tactical Pause" gadget - prevents sending orders when game is paused
 - RED tooltip: do "/unitcounter" to enable total units on map (as player its just total units of the team)
-- Advplayerlist: added /cputext command, shows cpu usage in %
+- Advplayerlist: added /cputext command, shows cpu usage in %  +  relocated TS value
 
 
 9.10 -> 9.11
