--- a/changelog.txt
+++ b/changelog.txt
@@ -5,6 +5,8 @@ Balance changes:
 - Increase cost of Annihilator by 10%
 - Increase cost of Doomsday Machine by 15%
 - Bigger blow radius for air cons (128 -> 160)
+- Intruder (core t2 vech transport) HP increased 12500 -> 20 000
+
 
 Others:
 - Added "No Tactical Pause" gadget - prevents sending orders when game is paused
