--- a/changelog.txt
+++ b/changelog.txt
@@ -6,7 +6,7 @@ Balance changes:
 - Increase cost of Doomsday Machine by 15%
 - Bigger blow radius for air cons (128 -> 160)
 - Intruder (core t2 vech transport) HP increased 12500 -> 20 000
-
+- Air transports are harder to EMP
 
 Others:
 - Added "No Tactical Pause" gadget - prevents sending orders when game is paused
