--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@ Balance changes:
 - Bigger blow radius for air cons (128 -> 160)
 - Intruder (core t2 vech transport) HP increased 12500 -> 20 000
 - Air transports are harder to EMP
+- Cost of T1 and T2 land bombers decreased by 5%
 
 Others:
 - Added "No Tactical Pause" gadget - prevents sending orders when game is paused
