--- a/changelog.txt
+++ b/changelog.txt
@@ -13,7 +13,7 @@ Others:
 - Added "No Tactical Pause" gadget - prevents sending orders when game is paused
 - RED tooltip: do "/unitcounter" to enable total units on map (as player its just total units of the team)
 - Advplayerlist: added /cputext command, shows cpu usage in %  +  relocated TS value
-
+- Added new widget "gui_transport_weight_limit" - Hilight's with unit transport can lift
 
 9.10 -> 9.11
 16/10/2015
