--- a/changelog.txt
+++ b/changelog.txt
@@ -8,6 +8,7 @@ Balance changes:
 - Intruder (core t2 vech transport) HP increased 12500 -> 20 000
 - Air transports are harder to EMP
 - Cost of T1 and T2 land bombers decreased by 5%
+- Dominator's reload time increased (7 -> 8) and damage increased (750 -> 800)
 
 Others:
 - Added "No Tactical Pause" gadget - prevents sending orders when game is paused
