BA: Buildtime increased by 15% for advanced fusions

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@ X/10/2015
 
 Balance changes:
 - Buzzsaw and Vulcan - on "hold fire" by default
+- Buildtime increased by 15% for advanced fusions
 
 Others:
 
