BA: Adv crawling bomb is moving faster (1.75 -> 2.8)

--- a/changelog.txt
+++ b/changelog.txt
@@ -5,7 +5,7 @@ Balance changes:
 - Buzzsaw and Vulcan - on "hold fire" by default
 - Buildtime increased by 15% for advanced fusions
 - T2 Missile ships accelerating a little bit faster
-
+- Adv crawling bomb is moving faster (1.75 -> 2.8)
 
 Others:
 
