BA: Termite (core spider) metal cost decreased by 10%

--- a/changelog.txt
+++ b/changelog.txt
@@ -7,6 +7,7 @@ Balance changes:
 - T2 Missile ships accelerating a little bit faster
 - Adv crawling bomb is moving faster (1.75 -> 2.8)
 - Pyro have 5% less HP
+- Termite metal cost decreased by 10%
 
 Others:
 
