--- a/changelog.txt
+++ b/changelog.txt
@@ -10,7 +10,7 @@ Balance changes:
 - Termite metal cost decreased by 10%
 
 Others:
-
+- Added "Pause/Unpause sounds" widget (disabled by default)
 
 9.11 -> 9.12
 23/10/2015
