--- a/changelog.txt
+++ b/changelog.txt
@@ -13,7 +13,7 @@ Balance changes:
 Others:
 - Added "Commands info" widget
 - Resurrection halos for enemy units too
-- Removed groundplate from the factorries decals + nanos have a decal again.
+- Removed groundplate from the factorries decals + nanos have a decal again
 - Added "Pause/Unpause sounds" widget (disabled by default)
 - "Shadow Quality Manager" widget has new max quality: 6k (was 8k) and low: 3k (was 2k)
 - "LockCamera widget" removed (became obsolete, advplayerlist has it already)
