--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,17 @@
-﻿9.12 -> 9.13
+﻿9.13 -> 9.14
+XX/11/2015
+
+Balance changes:
+- Air Transport speed will be slowed down when lifting heavy loads.
+
+Others:
+- Fixed unloaded units sliding bug
+- Fixed units failing to unload and fixed unload trough cliffs
+- Added "Bloom Shader" widget (default off)
+- Map-info widget displays map size aswell
+
+
+9.12 -> 9.13
 30/10/2015
 
 Balance changes:
