BA: disable "dgun charge" because "com in trans" is not so op anymore (see air_transports_fix.lua)

--- a/changelog.txt
+++ b/changelog.txt
@@ -3,6 +3,7 @@
 
 Balance changes:
 - Air Transport speed will be slowed down when lifting heavy loads.
+- Disabled "dgun charge" because "transporting commander" bugs were fixed
 
 Others:
 - Fixed halos for enemy units
