--- a/changelog.txt
+++ b/changelog.txt
@@ -1,4 +1,13 @@
-﻿9.13 -> 9.14
+﻿9.14 -> 9.15
+X/11/2015
+
+Balance changes:
+- It's easier to paralyze bantha (paralyze multiplier = 1.3)
+
+Others:
+
+
+9.13 -> 9.14
 06/11/2015
 
 Balance changes:
