--- a/changelog.txt
+++ b/changelog.txt
@@ -1,10 +1,12 @@
 ﻿9.14 -> 9.15
-X/11/2015
+07/11/2015
 
 Balance changes:
 - It's easier to paralyze bantha (paralyze multiplier = 1.3)
 
 Others:
+- bugfix transports causing invisible units
+- bugfix for the bet system
 
 
 9.13 -> 9.14
