--- a/changelog.txt
+++ b/changelog.txt
@@ -1,15 +1,15 @@
 ﻿9.15 -> 9.16
-xx/11/2015
-
-Balance changes:
+15/11/2015
 
 Others:
+- Ally selected units has ben transformed into gadget
 - ecostats: dead teams no longer show + has a fixed relative position (prevents it from moving down a bit after an ffa)
-- advplayerlist shows who is has betted and what score they have
-- betting frontend enabled by default
+- advplayerlist shows who has betted and what score they have
+- bet frontend enabled by default + added command: /selectbets
 - bugfix glitchy water for "map edge extension" widget
-- redui tooltip: text moved a bit higher to make room for keybind/commands/changelog buttons
-- redui minimap: added a border around it
+- redui minimap: added a border
+- small perf increase for various widgets
+
 
 9.14 -> 9.15
 07/11/2015
