--- a/changelog.txt
+++ b/changelog.txt
@@ -3,7 +3,8 @@ xx/11/2015
 
 Balance changes:
 - Core Underwater Moho Mine cost 10% less metal
-- "Advanced Construction Sub" cost reduced by 20%
+- "Advanced Construction Sub" metal cost reduced by 20%
+- "Seaplane Platform" metal cost reduced by 20%
 
 Others:
 - Advplayerlist: doubleclick playername: will mirror the player's selection too!
